sto facendo la struttura, inizio la struttura del footer per poi concludere la nav

--- a/index.html
+++ b/index.html
@@ -15,33 +15,268 @@
 
       </nav>
 
-      <section class="jumbo">
+      <section class="jumbo container-fluid container-fluid">
 
       </section>
 
     </header>
 
-
     <main>
-      <section class="section1">
+
+      <!-- sezione1, quella con i 6 loghi -->
+      <section class="section1 container-fluid">
+
+        <div class="container">
+
+          <div class="row">
+            <div class="col-xs-12 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+              <div class="">
+                INNOVATIVE
+              </div>
+            </div>
+          </div>
+
+
+          <div class="row">
+            <div class="col-xs-6 col-md-2">
+              imm
+            </div>
+
+            <div class="col-xs-6 col-md-2">
+              imm
+            </div>
+
+            <div class="col-xs-6 col-md-2">
+              imm
+            </div>
+
+            <div class="col-xs-6 col-md-2">
+              imm
+
+            </div>
+            <div class="col-xs-6 col-md-2">
+              imm
+
+            </div>
+            <div class="col-xs-6 col-md-2">
+              imm
+
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-xs-4 col-xs-offset-4 col-md-4 col-lg-4">
+            <div class="">
+              <a href="#">View customer stories ></a>
+            </div>
+          </div>
+
+
+        </div>
 
       </section>
-      <section class="section2">
+
+      <!-- sezione2, (deploy and scale) sezione con i 4 blocchi innestati nel quadrato di destra -->
+      <section class="section2 container-fluid">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-md-4 col-lg-4">
+              <div class="">
+                <div class="">
+                  Deploy
+                </div>
+                <div class="">
+                  Deploy
+                </div>
+                <div class="">
+                  Deploy
+                </div>
+                <div class="">
+                  Deploy
+                </div>
+                <div class="">
+                  Deploy
+                </div>
+              </div>
+
+            </div>
+
+            <div class="col-xs-12 col-md-8 col-lg-8">
+              <div class="container-fluid">
+                <div class="row">
+                  <div class="col-xs-12 col-md-6 col-lg-6">
+                    cluster
+                  </div>
+                  <div class="col-xs-12 col-md-6 col-lg-6">
+                    optimized
+                  </div>
+                  <div class="col-xs-12 col-md-6 col-lg-6">
+                    one click
+                  </div>
+                  <div class="col-xs-12 col-md-6 col-lg-6">
+                    global availability
+                  </div>
+
+                </div>
+
+              </div>
+
+
+            </div>
+
+          </div>
+
+        </div>
+
 
       </section>
-      <section class="section3">
+
+      <!-- sezione 3 quella con la slideshow (designed for developers) -->
+      <section class="section3 container-fluid">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12">
+              Designed for developers <br>
+              e sottotitolo
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-xs-1 col-md-1 col-md-offset-2 col-lg-1">
+              <
+            </div>
+            <div class="col-xs-10 col-md-6 col-md-offset-0 col-lg-6">
+              immagine
+            </div>
+            <div class="col-xs-1 col-md-1 col-md-offset-0 col-lg-1">
+              >
+            </div>
+
+          </div>
+          <div class="row">
+            <div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
+              Create compute servers
+            </div>
+
+          </div>
+
+          <div class="row">
+            <div class="col-xs-2 col-xs-offset-5">
+              i pallini
+            </div>
+
+          </div>
+
+        </div>
 
       </section>
-      <section class="section4">
+
+      <!-- sezione 4 quella con titolo(the features your business...) e tre div a fianco -->
+      <section class="section4 container-fluid">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-md-10 col-md-offset-1 col-lg-6 col-lg-offset-3">
+              The features your business needs
+
+            </div>
+
+          </div>
+
+          <div class="row">
+            <div class="col-xs-12 col-md-4 col-md-offset-0">
+              Predictable
+
+            </div>
+            <div class="col-xs-12 col-md-4 col-md-offset-0">
+              World-class
+
+            </div>
+            <div class="col-xs-12 col-md-4 col-md-offset-0">
+              Reliable
+
+            </div>
+
+
+
+          </div>
+
+        </div>
 
       </section>
-      <section class="section5">
+
+      <!-- sezione 5, tit (service your...) sfondo blu 2 tabelle -->
+      <section class="section5 container-fluid">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-lg-10 col-lg-offset-1">
+              Service your customers around the world from 12 regions.
+
+            </div>
+
+          </div>
+
+          <div class="row">
+
+            <div class="col-xs-12 col-md-6">
+              tab1
+            </div>
+
+            <div class="col-xs-12 col-md-6">
+              tab2
+            </div>
+
+          </div>
+
+        </div>
+
 
       </section>
-      <section class="section6">
+
+      <!-- sezione 6 (development teams), praticamente uguale a sezione 3 -->
+      <section class="section6 container-fluid">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12">
+              Development teams love DigitalOcean
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-xs-1 col-md-1 col-md-offset-2 col-lg-1">
+              <
+            </div>
+            <div class="col-xs-10 col-md-6 col-md-offset-0 col-lg-6">
+              immagine
+            </div>
+            <div class="col-xs-1 col-md-1 col-md-offset-0 col-lg-1">
+              >
+            </div>
+
+          </div>
+
+          <div class="row">
+            <div class="col-xs-2 col-xs-offset-5">
+              i pallini
+            </div>
+
+          </div>
+
+        </div>
 
       </section>
-      <section class="section7">
+
+      <!-- sezione 7, ultima prima del footer -->
+      <section class="section7 container-fluid">
+        <div class="container">
+          <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2 col-lg-4 col-lg-offset-4">
+            <div class="">
+              get started e bottone crea account
+            </div>
+
+          </div>
+
+        </div>
+
 
       </section>
 
