--- a/index.html
+++ b/index.html
@@ -14,8 +14,50 @@
       <nav>
 
       </nav>
-
+      <!-- sezione jumbo. ci vanno due div, in quello di destra(sotto per xs) va un form -->
       <section class="jumbo container-fluid container-fluid">
+				<div class="container">
+					<div class="row">
+
+						<div class="col-xs-12 col-md-6 col-lg-6">
+							<div class="">
+								The simplest cloud platform for developers & teams
+							</div>
+							<div class="">
+								Deploy, manage, and scale cloud applications faster and more efficiently on DigitalOcean. We make managing infrastructure easy for teams and businesses, wheter you're running one virtual machine or ten thousand.
+							</div>
+
+						</div>
+
+						<div class="col-xs-12 col-md-6 col-lg-6">
+							<div class="">
+								Deploy your app in seconds.
+							</div>
+							<div class="">
+								Get started now.
+							</div>
+							<form action="/action_page.php">
+								  <div class="form-group">
+									  <label for="email"></label>
+									  <input type="email" class="form-control" placeholder="Email" id="email">
+								  </div>
+								  <div class="form-group">
+								 	  <label for="pwd"></label>
+							 		  <input type="password" placeholder="Password" class="form-control" id="pwd">
+								  </div>
+
+								  <button type="button" class="btn btn-primary btn-block">Create your account</button>
+									<button type="button" class="btn btn-default btn-block">Sign up with google</button>
+								</form>
+								<div class="">
+									By signing up you agree to the <a href="#">Terms of Service</a>.
+								</div>
+
+						</div>
+
+					</div>
+
+				</div>
 
       </section>
 
@@ -277,12 +319,57 @@
 
         </div>
 
-
       </section>
 
     </main>
 
     <footer>
+		  <!-- il gooter lo divido in due parti, il div di destra avrà dentro 4 colonne -->
+			<section class="container-fluid">
+				<div class="container">
+					<div class="row">
+						<div class="col-xs-12 col-md-6 col-lg-4">
+							<div class="">
+								simbolino
+							</div>
+							<div class="">
+								@ 2018 DigitalOcean, LLC. All rights reserved.
+							</div>
+							<div class="">
+								Proudly made in NY
+							</div>
+							<div class="">
+								icone dei vari social in riga(fare ul)
+							</div>
+						</div>
+
+						<div class="col-xs-12 col-md-12 col-lg-8">
+							<div class="container-fluid">
+								<div class="row">
+									<div class="col-xs-12 col-md-6 col-lg-3">
+										Company
+									</div>
+									<div class="col-xs-12 col-md-6 col-lg-3">
+										Products
+									</div>
+									<div class="col-xs-12 col-md-6 col-lg-3">
+										Community
+									</div>
+									<div class="col-xs-12 col-md-6 col-lg-3">
+										Support
+									</div>
+
+								</div>
+
+							</div>
+
+						</div>
+
+					</div>
+
+				</div>
+
+			</section>
 
     </footer>
 
