--- a/index.html
+++ b/index.html
@@ -11,9 +11,37 @@
 	</head>
 	<body>
     <header>
-      <nav>
+			<nav class="navbar navbar-inverse container-fluid">
+				<div class="container">
 
-      </nav>
+			    <div class="navbar-header">
+			      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			      </button>
+
+			      <a class="navbar-brand" href="#"><img id="logonav" src="img/logo.png" alt=""> </a>
+
+			    </div>
+
+			    <div class="collapse navbar-collapse" id="myNavbar">
+			      <ul id="navbar-nav-center" class="nav navbar-nav">
+			        <li class="active"><a href="#">Home</a></li>
+			        <li><a href="#">Page 1</a></li>
+			        <li><a href="#">Page 2</a></li>
+			        <li><a href="#">Page 3</a></li>
+			      </ul>
+			      <ul class="nav navbar-nav navbar-right">
+			        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+			        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+			      </ul>
+			    </div>
+			  </div>
+
+			</nav>
+
+
       <!-- sezione jumbo. ci vanno due div, in quello di destra(sotto per xs) va un form -->
       <section class="jumbo container-fluid container-fluid">
 				<div class="container">
