--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 	<head>
 		<meta charset="utf-8">
-		<title>digitalocean</title>
+		<title>digitalocean cavicchioli</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0 ">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/style.css">
@@ -21,13 +21,13 @@
 			        <span class="icon-bar"></span>
 			      </button>
 
-			      <a class="navbar-brand" href="#"><img id="logonav" src="img/logo.png" alt=""> </a>
+			      <a class="navbar-brand" href="#"><img id="logonav" src="img/logo.png" alt=""></a>
 
 			    </div>
 
 			    <div class="collapse navbar-collapse" id="myNavbar">
 			      <ul id="navbar-nav-center" class="nav navbar-nav">
-			        <li class="active"><a href="#">Home</a></li>
+			        <li class=""><a href="#">Home</a></li>
 			        <li><a href="#">Page 1</a></li>
 			        <li><a href="#">Page 2</a></li>
 			        <li><a href="#">Page 3</a></li>
@@ -101,35 +101,35 @@
           <div class="row">
             <div class="col-xs-12 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
               <div class="">
-                INNOVATIVE
+                INNOVATIVE BUSINESS TRUST DIGITALOCEAN
               </div>
             </div>
           </div>
 
 
           <div class="row">
-            <div class="col-xs-6 col-md-2">
-              imm
+            <div class="loghi-esterni col-xs-6 col-md-2">
+              <img src="img/docker.png" alt="">
             </div>
 
-            <div class="col-xs-6 col-md-2">
-              imm
+            <div class="loghi-esterni col-xs-6 col-md-2">
+              <img src="img/gitlab.png" alt="">
             </div>
 
-            <div class="col-xs-6 col-md-2">
-              imm
+            <div class="loghi-esterni col-xs-6 col-md-2">
+              <img src="img/slack.png" alt="">
             </div>
 
-            <div class="col-xs-6 col-md-2">
-              imm
+            <div class="loghi-esterni col-xs-6 col-md-2">
+              <img src="img/hashicorp.png" alt="">
 
             </div>
-            <div class="col-xs-6 col-md-2">
-              imm
+            <div class="loghi-esterni col-xs-6 col-md-2">
+              <img src="img/hashicorp.png" alt="">
 
             </div>
-            <div class="col-xs-6 col-md-2">
-              imm
+            <div class="loghi-esterni col-xs-6 col-md-2">
+              <img src="img/splunk.png" alt="">
 
             </div>
           </div>
@@ -150,22 +150,32 @@
       <section class="section2 container-fluid">
         <div class="container">
           <div class="row">
+						<div class="col-xs-12">
+							<div class="">
+								Deploy and scale seamlessly
+							</div>
+							<div class="">
+								Our optimized configuration process saves your team time when runnning and scaling distributed applications, AI & machine learning workloads, hosted services, cclient websites, or CI/CD envviroments.
+							</div>
+						</div>
+
+
             <div class="col-xs-12 col-md-4 col-lg-4">
-              <div class="">
+              <div class="sec2menu">
                 <div class="">
                   Deploy
                 </div>
                 <div class="">
-                  Deploy
+                  Manage
                 </div>
                 <div class="">
-                  Deploy
+                  Secure
                 </div>
                 <div class="">
-                  Deploy
+                  Scale
                 </div>
                 <div class="">
-                  Deploy
+                  Monitor
                 </div>
               </div>
 
@@ -175,16 +185,51 @@
               <div class="container-fluid">
                 <div class="row">
                   <div class="col-xs-12 col-md-6 col-lg-6">
-                    cluster
+                    <div class="">
+                    	<img src="img/cluster-deploy.svg" alt="">
+                    </div>
+										<div class="">
+											Cluster deployments
+										</div>
+										<div class="">
+											Provision multiple Droplets (virtual machines) in seconds with our control pael, CLI, or directly against our API.
+										</div>
                   </div>
                   <div class="col-xs-12 col-md-6 col-lg-6">
-                    optimized
+										<div class="">
+                    	<img src="img/optimized-compute.svg" alt="">
+                    </div>
+										<div class="">
+											Optimized compute types
+										</div>
+										<div class="">
+											Get the compute resources you need with Standard or Optimized Droplets
+										</div>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="col-xs-12 col-md-6 col-lg-6">
+										<div class="">
+                    	<img src="img/one-click.svg" alt="">
+                    </div>
+										<div class="">
+											One-click apps
+										</div>
+										<div class="">
+											Skip the install and configuration process with pre-built open source images supporting Rails, Cassandra, Docker, and more.
+										</div>
                   </div>
                   <div class="col-xs-12 col-md-6 col-lg-6">
-                    one click
-                  </div>
-                  <div class="col-xs-12 col-md-6 col-lg-6">
-                    global availability
+										<div class="">
+                    	<img src="img/global.svg" alt="">
+                    </div>
+										<div class="">
+											Global availability
+										</div>
+										<div class="">
+										  Deploy to any of our data center regions around the world.
+										</div>
                   </div>
 
                 </div>
@@ -203,41 +248,67 @@
 
       <!-- sezione 3 quella con la slideshow (designed for developers) -->
       <section class="section3 container-fluid">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12">
-              Designed for developers <br>
-              e sottotitolo
-            </div>
-          </div>
+				<div class="container">
+					<div class="row">
+						<div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 col-lg-6">
 
-          <div class="row">
-            <div class="col-xs-1 col-md-1 col-md-offset-2 col-lg-1">
-              <
-            </div>
-            <div class="col-xs-10 col-md-6 col-md-offset-0 col-lg-6">
-              immagine
-            </div>
-            <div class="col-xs-1 col-md-1 col-md-offset-0 col-lg-1">
-              >
-            </div>
+							<div class="">
+								Development teams love DigitalOcean
+							</div>
+						  <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
-          </div>
-          <div class="row">
-            <div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
-              Create compute servers
-            </div>
+						    <!-- Indicators -->
+						    <ol class="carousel-indicators">
 
-          </div>
+						      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+						      <li data-target="#myCarousel" data-slide-to="1"></li>
+						      <li data-target="#myCarousel" data-slide-to="2"></li>
+									<li data-target="#myCarousel" data-slide-to="3"></li>
+						    </ol>
 
-          <div class="row">
-            <div class="col-xs-2 col-xs-offset-5">
-              i pallini
-            </div>
+						    <!-- Wrapper for slides -->
+						    <div class="carousel-inner">
 
-          </div>
+						      <div class="item active">
+						        <img src="img/screenshot-create-droplet-12336b41.jpg" alt="" style="width:100%;">
 
-        </div>
+						      </div>
+
+						      <div class="item">
+						        <img src="img/screenshot-create-droplet-12336b41.jpg" alt="" style="width:100%;">
+
+						      </div>
+
+						      <div class="item">
+						        <img src="img/screenshot-create-droplet-12336b41.jpg" alt="" style="width:100%;">
+
+						      </div>
+
+									<div class="item">
+						        <img src="img/screenshot-create-droplet-12336b41.jpg" alt="" style="width:100%;">
+
+						      </div>
+						    </div>
+
+						    <!-- Left and right controls -->
+						    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+						      <span class="glyphicon glyphicon-chevron-left"></span>
+						      <span class="sr-only">Previous</span>
+						    </a>
+						    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+						      <span class="glyphicon glyphicon-chevron-right"></span>
+						      <span class="sr-only">Next</span>
+						    </a>
+
+
+						  </div>
+
+
+						</div>
+
+					</div>
+
+				</div>
 
       </section>
 
@@ -254,15 +325,49 @@
 
           <div class="row">
             <div class="col-xs-12 col-md-4 col-md-offset-0">
-              Predictable
+							<div class="">
+								<img src="img/pred-pricing.svg" alt="">
+							</div>
+							<div class="">
+								Predictable Pricing
+							</div>
+							<div class="">
+								Leve complex pricing structures behind. Always know what you'll play per month with a flat, industry-leading pricing structure.
+							</div>
+							<div class="">
+								<a href="#">Pricing ></a>
+							</div>
+
 
             </div>
             <div class="col-xs-12 col-md-4 col-md-offset-0">
-              World-class
+							<div class="">
+								<img src="img/world-class.svg" alt="">
+							</div>
+							<div class="">
+								World-class service
+							</div>
+							<div class="">
+								Free round-the-clock technical support for all customers. You'll feel the love.
+							</div>
+							<div class="">
+								<a href="#">Support ></a>
+							</div>
 
             </div>
             <div class="col-xs-12 col-md-4 col-md-offset-0">
-              Reliable
+							<div class="">
+								<img src="img/reliable-platform.svg" alt="">
+							</div>
+							<div class="">
+								Reliable platform
+							</div>
+							<div class="">
+								More then 100,000 developer teams worldwide trust DigitalOcean to support their business with a 99,99% uptime SLA for all services.
+							</div>
+							<div class="">
+								<a href="#">Pricing ></a>
+							</div>
 
             </div>
 
@@ -286,13 +391,146 @@
           </div>
 
           <div class="row">
-
             <div class="col-xs-12 col-md-6">
-              tab1
+							<div class="container-fluid">
+								<div class="row">
+									<div class="col-xs-1">
+										AMS2
+									</div>
+									<div class="col-xs-5 col-xs-offset-1">
+										Amsterdam, Netherlands
+									</div>
+									<div class="col-xs-3 col-xs-offset-2">
+										<a href="#">Test speed ></a>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-1">
+										AMS2
+									</div>
+									<div class="col-xs-5 col-xs-offset-1">
+										Amsterdam, Netherlands
+									</div>
+									<div class="col-xs-3 col-xs-offset-2">
+										<a href="#">Test speed ></a>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-1">
+										AMS2
+									</div>
+									<div class="col-xs-5 col-xs-offset-1">
+										Amsterdam, Netherlands
+									</div>
+									<div class="col-xs-3 col-xs-offset-2">
+										<a href="#">Test speed ></a>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-1">
+										AMS2
+									</div>
+									<div class="col-xs-5 col-xs-offset-1">
+										Amsterdam, Netherlands
+									</div>
+									<div class="col-xs-3 col-xs-offset-2">
+										<a href="#">Test speed ></a>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-1">
+										AMS2
+									</div>
+									<div class="col-xs-5 col-xs-offset-1">
+										Amsterdam, Netherlands
+									</div>
+									<div class="col-xs-3 col-xs-offset-2">
+										<a href="#">Test speed ></a>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-1">
+										AMS2
+									</div>
+									<div class="col-xs-5 col-xs-offset-1">
+										Amsterdam, Netherlands
+									</div>
+									<div class="col-xs-3 col-xs-offset-2">
+										<a href="#">Test speed ></a>
+									</div>
+								</div>
+							</div>
             </div>
 
             <div class="col-xs-12 col-md-6">
-              tab2
+							<div class="container-fluid">
+								<div class="row">
+									<div class="col-xs-1">
+										AMS2
+									</div>
+									<div class="col-xs-5 col-xs-offset-1">
+										Amsterdam, Netherlands
+									</div>
+									<div class="col-xs-3 col-xs-offset-2">
+										<a href="#">Test speed ></a>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-1">
+										AMS2
+									</div>
+									<div class="col-xs-5 col-xs-offset-1">
+										Amsterdam, Netherlands
+									</div>
+									<div class="col-xs-3 col-xs-offset-2">
+										<a href="#">Test speed ></a>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-1">
+										AMS2
+									</div>
+									<div class="col-xs-5 col-xs-offset-1">
+										Amsterdam, Netherlands
+									</div>
+									<div class="col-xs-3 col-xs-offset-2">
+										<a href="#">Test speed ></a>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-1">
+										AMS2
+									</div>
+									<div class="col-xs-5 col-xs-offset-1">
+										Amsterdam, Netherlands
+									</div>
+									<div class="col-xs-3 col-xs-offset-2">
+										<a href="#">Test speed ></a>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-1">
+										AMS2
+									</div>
+									<div class="col-xs-5 col-xs-offset-1">
+										Amsterdam, Netherlands
+									</div>
+									<div class="col-xs-3 col-xs-offset-2">
+										<a href="#">Test speed ></a>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-1">
+										AMS2
+									</div>
+									<div class="col-xs-5 col-xs-offset-1">
+										Amsterdam, Netherlands
+									</div>
+									<div class="col-xs-3 col-xs-offset-2">
+										<a href="#">Test speed ></a>
+									</div>
+								</div>
+							</div>
             </div>
 
           </div>
@@ -304,35 +542,65 @@
 
       <!-- sezione 6 (development teams), praticamente uguale a sezione 3 -->
       <section class="section6 container-fluid">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12">
-              Development teams love DigitalOcean
-            </div>
-          </div>
+				<div class="container">
+					<div class="row">
+						<div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 col-lg-6">
 
-          <div class="row">
-            <div class="col-xs-1 col-md-1 col-md-offset-2 col-lg-1">
-              <
-            </div>
-            <div class="col-xs-10 col-md-6 col-md-offset-0 col-lg-6">
-              immagine
-            </div>
-            <div class="col-xs-1 col-md-1 col-md-offset-0 col-lg-1">
-              >
-            </div>
+							<div class="">
+								Development teams love DigitalOcean
+							</div>
+						  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+						    <!-- Indicators -->
+						    <ol class="carousel-indicators">
+						      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+						      <li data-target="#myCarousel" data-slide-to="1"></li>
+						      <li data-target="#myCarousel" data-slide-to="2"></li>
+						    </ol>
 
-          </div>
+						    <!-- Wrapper for slides -->
+						    <div class="carousel-inner">
 
-          <div class="row">
-            <div class="col-xs-2 col-xs-offset-5">
-              i pallini
-            </div>
+						      <div class="item active">
+						        <img src="img/screenshot-create-droplet-12336b41.jpg" alt="Los Angeles" style="width:100%;">
+						        <div class="carousel-caption">
+						          <h3>Los Angeles</h3>
+						          <p>LA is always so much fun!</p>
+						        </div>
+						      </div>
 
-          </div>
+						      <div class="item">
+						        <img src="img/screenshot-create-droplet-12336b41.jpg" alt="Chicago" style="width:100%;">
+						        <div class="carousel-caption">
+						          <h3>Chicago</h3>
+						          <p>Thank you, Chicago!</p>
+						        </div>
+						      </div>
 
-        </div>
+						      <div class="item">
+						        <img src="img/screenshot-create-droplet-12336b41.jpg" alt="New York" style="width:100%;">
+						        <div class="carousel-caption">
+						          <h3>New York</h3>
+						          <p>We love the Big Apple!</p>
+						        </div>
+						      </div>
+						    </div>
 
+						    <!-- Left and right controls -->
+						    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+						      <span class="glyphicon glyphicon-chevron-left"></span>
+						      <span class="sr-only">Previous</span>
+						    </a>
+						    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+						      <span class="glyphicon glyphicon-chevron-right"></span>
+						      <span class="sr-only">Next</span>
+						    </a>
+						  </div>
+
+						</div>
+
+					</div>
+
+				</div>
       </section>
 
       <!-- sezione 7, ultima prima del footer -->
@@ -340,8 +608,11 @@
         <div class="container">
           <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2 col-lg-4 col-lg-offset-4">
             <div class="">
-              get started e bottone crea account
+              Get started no.
             </div>
+						<div class="">
+							<button type="button" class="btn">Create your account</button>
+						</div>
 
           </div>
 
