--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>digitalocean cavicchioli</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0 ">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/style.css">
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
@@ -608,7 +609,7 @@
         <div class="container">
           <div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2 col-lg-4 col-lg-offset-4">
             <div class="">
-              Get started no.
+              Get started now.
             </div>
 						<div class="">
 							<button type="button" class="btn">Create your account</button>
@@ -629,7 +630,10 @@
 					<div class="row">
 						<div class="col-xs-12 col-md-6 col-lg-4">
 							<div class="">
-								simbolino
+								<a href="#">
+									<img src="img/logo-small.svg" alt="">
+
+								</a>
 							</div>
 							<div class="">
 								@ 2018 DigitalOcean, LLC. All rights reserved.
@@ -637,8 +641,14 @@
 							<div class="">
 								Proudly made in NY
 							</div>
-							<div class="">
-								icone dei vari social in riga(fare ul)
+							<div class="footer-icons">
+								<ul>
+									<li><a href="#"><i style="font-size:24px" class="fa">&#xf099;</i></a> </li>
+									<li><a href="#"><i style="font-size:24px" class="fa">&#xf082;</i></a></li>
+									<li><a href="#"><i style="font-size:24px" class="fa">&#xf16d;</i></a></li>
+									<li><a href="#"><i style="font-size:24px" class="fa">&#xf16a;</i></a></li>
+									<li><a href="#"><i class="fa fa-linkedin-square" style="font-size:24px"></i></a></li>
+								</ul>
 							</div>
 						</div>
 
@@ -646,16 +656,77 @@
 							<div class="container-fluid">
 								<div class="row">
 									<div class="col-xs-12 col-md-6 col-lg-3">
-										Company
+										<div class="footer-list">
+											<ul>
+											  <li><span>Company</span> </li>
+											  <li><a href="#">About</a></li>
+											  <li><a href="#">Leadership</a></li>
+											  <li><a href="#">link</a></li>
+												<li><a href="#">Blog</a></li>
+											  <li><a href="#">Careers</a></li>
+											  <li><a href="#">Partner Network</a></li>
+											  <li><a href="#">Referral Program</a></li>
+												<li><a href="#">Events</a></li>
+											  <li><a href="#">Press</a></li>
+											  <li><a href="#">Legal & Security</a></li>
+											</ul>
+
+										</div>
+
 									</div>
 									<div class="col-xs-12 col-md-6 col-lg-3">
-										Products
+										<div class="footer-list">
+											<ul>
+											  <li><span>Company</span> </li>
+											  <li><a href="#">About</a></li>
+											  <li><a href="#">Leadership</a></li>
+											  <li><a href="#">link</a></li>
+												<li><a href="#">Blog</a></li>
+											  <li><a href="#">Careers</a></li>
+											  <li><a href="#">Partner Network</a></li>
+											  <li><a href="#">Referral Program</a></li>
+												<li><a href="#">Events</a></li>
+											  <li><a href="#">Press</a></li>
+											  <li><a href="#">Legal & Security</a></li>
+											</ul>
+
+										</div>
 									</div>
 									<div class="col-xs-12 col-md-6 col-lg-3">
-										Community
+										<div class="footer-list">
+											<ul>
+											  <li><span>Company</span> </li>
+											  <li><a href="#">About</a></li>
+											  <li><a href="#">Leadership</a></li>
+											  <li><a href="#">link</a></li>
+												<li><a href="#">Blog</a></li>
+											  <li><a href="#">Careers</a></li>
+											  <li><a href="#">Partner Network</a></li>
+											  <li><a href="#">Referral Program</a></li>
+												<li><a href="#">Events</a></li>
+											  <li><a href="#">Press</a></li>
+											  <li><a href="#">Legal & Security</a></li>
+											</ul>
+
+										</div>
 									</div>
 									<div class="col-xs-12 col-md-6 col-lg-3">
-										Support
+										<div class="footer-list">
+											<ul>
+											  <li><span>Company</span> </li>
+											  <li><a href="#">About</a></li>
+											  <li><a href="#">Leadership</a></li>
+											  <li><a href="#">link</a></li>
+												<li><a href="#">Blog</a></li>
+											  <li><a href="#">Careers</a></li>
+											  <li><a href="#">Partner Network</a></li>
+											  <li><a href="#">Referral Program</a></li>
+												<li><a href="#">Events</a></li>
+											  <li><a href="#">Press</a></li>
+											  <li><a href="#">Legal & Security</a></li>
+											</ul>
+
+										</div>
 									</div>
 
 								</div>
