--- a/index.html
+++ b/index.html
@@ -59,28 +59,30 @@
 						</div>
 
 						<div class="col-xs-12 col-md-6 col-lg-6">
-							<div class="">
-								Deploy your app in seconds.
-							</div>
-							<div class="">
-								Get started now.
-							</div>
-							<form action="/action_page.php">
-								  <div class="form-group">
-									  <label for="email"></label>
-									  <input type="email" class="form-control" placeholder="Email" id="email">
-								  </div>
-								  <div class="form-group">
-								 	  <label for="pwd"></label>
-							 		  <input type="password" placeholder="Password" class="form-control" id="pwd">
-								  </div>
-
-								  <button type="button" class="btn btn-primary btn-block">Create your account</button>
-									<button type="button" class="btn btn-default btn-block">Sign up with google</button>
-								</form>
+							<div class="jumbo-form">
 								<div class="">
-									By signing up you agree to the <a href="#">Terms of Service</a>.
+									Deploy your app in seconds.
 								</div>
+								<div class="">
+									Get started now.
+								</div>
+								<form action="/action_page.php">
+									  <div class="form-group">
+										  <label for="email"></label>
+										  <input type="email" class="form-control" placeholder="Email" id="email">
+									  </div>
+									  <div class="form-group">
+									 	  <label for="pwd"></label>
+								 		  <input type="password" placeholder="Password" class="form-control" id="pwd">
+									  </div>
+									  <button type="button" class="btn btn-primary btn-block">Create your account</button>
+										<button type="button" class="btn btn-default btn-block">Sign up with google</button>
+									</form>
+									<div class="">
+										By signing up you agree to the <a href="#">Terms of Service</a>.
+									</div>
+
+							</div>
 
 						</div>
 
@@ -383,7 +385,7 @@
       <!-- sezione 5, tit (service your...) sfondo blu 2 tabelle -->
       <section class="section5 container-fluid">
         <div class="container">
-          <div class="row">
+          <div class="row s5nobottom">
             <div class="col-xs-12 col-lg-10 col-lg-offset-1">
               Service your customers around the world from 12 regions.
 
@@ -391,7 +393,7 @@
 
           </div>
 
-          <div class="row">
+          <div class="row s5nobottom">
             <div class="col-xs-12 col-md-6">
 							<div class="container-fluid">
 								<div class="row">
@@ -449,7 +451,7 @@
 										<a href="#">Test speed ></a>
 									</div>
 								</div>
-								<div class="row">
+								<div class="row s5nobottom">
 									<div class="col-xs-1">
 										AMS2
 									</div>
@@ -520,7 +522,7 @@
 										<a href="#">Test speed ></a>
 									</div>
 								</div>
-								<div class="row">
+								<div class="row s5nobottom">
 									<div class="col-xs-1">
 										AMS2
 									</div>
