--- a/index.html
+++ b/index.html
@@ -28,14 +28,16 @@
 
 			    <div class="collapse navbar-collapse" id="myNavbar">
 			      <ul id="navbar-nav-center" class="nav navbar-nav">
-			        <li class=""><a href="#">Home</a></li>
-			        <li><a href="#">Page 1</a></li>
-			        <li><a href="#">Page 2</a></li>
-			        <li><a href="#">Page 3</a></li>
+			        <li class=""><a href="#">Products</a></li>
+			        <li><a href="#">Custoers</a></li>
+			        <li><a href="#">Community</a></li>
+			        <li><a href="#">Pricing</a></li>
 			      </ul>
 			      <ul class="nav navbar-nav navbar-right">
-			        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-			        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+							<li><a href="#">Docs</a></li>
+			        <li><a href="#">Support</a></li>
+			        <li><a href="#">Login</a></li>
+			        <li><a href="#">Sign Up</a></li>
 			      </ul>
 			    </div>
 			  </div>
@@ -67,20 +69,26 @@
 									Get started now.
 								</div>
 								<form action="/action_page.php">
-									  <div class="form-group">
-										  <label for="email"></label>
-										  <input type="email" class="form-control" placeholder="Email" id="email">
-									  </div>
-									  <div class="form-group">
-									 	  <label for="pwd"></label>
-								 		  <input type="password" placeholder="Password" class="form-control" id="pwd">
-									  </div>
-									  <button type="button" class="btn btn-primary btn-block">Create your account</button>
-										<button type="button" class="btn btn-default btn-block">Sign up with google</button>
-									</form>
+								  <div class="form-group">
+									  <label for="email"></label>
+									  <input type="email" class="form-control" placeholder="Email" id="email">
+								  </div>
+								  <div class="form-group">
+								 	  <label for="pwd"></label>
+							 		  <input type="password" placeholder="Password" class="form-control" id="pwd">
+								  </div>
+								  <button type="button" class="btn btn-primary btn-block">Create your account
+									</button>
+									<button type="button" class="btn btn-default btn-block">
+										<img src="img/google-icon.png" alt="">
+										<span>&nbsp;Sign up with google</span>
+									</button>
 									<div class="">
 										By signing up you agree to the <a href="#">Terms of Service</a>.
 									</div>
+
+								</form>
+
 
 							</div>
 
@@ -256,8 +264,13 @@
 						<div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 col-lg-6">
 
 							<div class="">
-								Development teams love DigitalOcean
+								Designed for developers
 							</div>
+
+							<div class="">
+								Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.
+							</div>
+
 						  <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
 						    <!-- Indicators -->
