--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
 		<title>digitalocean cavicchioli</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0 ">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+
+		<!-- <link rel="stylesheet" href="css/lib/bootstrap.min.css"> -->
+
 		<link rel="stylesheet" href="css/style.css">
+
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 	</head>
@@ -565,48 +570,45 @@
 							<div class="">
 								Development teams love DigitalOcean
 							</div>
-						  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+						  <div id="myCarousel2" class="carousel slide" data-ride="carousel">
 						    <!-- Indicators -->
 						    <ol class="carousel-indicators">
-						      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-						      <li data-target="#myCarousel" data-slide-to="1"></li>
-						      <li data-target="#myCarousel" data-slide-to="2"></li>
+						      <li data-target="#myCarousel2" data-slide-to="0" class="active"></li>
+						      <li data-target="#myCarousel2" data-slide-to="1"></li>
+						      <li data-target="#myCarousel2" data-slide-to="2"></li>
 						    </ol>
 
 						    <!-- Wrapper for slides -->
 						    <div class="carousel-inner">
 
 						      <div class="item active">
-						        <img src="img/screenshot-create-droplet-12336b41.jpg" alt="Los Angeles" style="width:100%;">
+						        <img src="img/screenshot-create-droplet-12336b41.jpg" alt="" style="width:100%;">
 						        <div class="carousel-caption">
-						          <h3>Los Angeles</h3>
-						          <p>LA is always so much fun!</p>
+
 						        </div>
 						      </div>
 
 						      <div class="item">
-						        <img src="img/screenshot-create-droplet-12336b41.jpg" alt="Chicago" style="width:100%;">
+						        <img src="img/screenshot-create-droplet-12336b41.jpg" alt="" style="width:100%;">
 						        <div class="carousel-caption">
-						          <h3>Chicago</h3>
-						          <p>Thank you, Chicago!</p>
+
 						        </div>
 						      </div>
 
 						      <div class="item">
-						        <img src="img/screenshot-create-droplet-12336b41.jpg" alt="New York" style="width:100%;">
+						        <img src="img/screenshot-create-droplet-12336b41.jpg" alt="" style="width:100%;">
 						        <div class="carousel-caption">
-						          <h3>New York</h3>
-						          <p>We love the Big Apple!</p>
+
 						        </div>
 						      </div>
 						    </div>
 
 						    <!-- Left and right controls -->
-						    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+						    <a class="left carousel-control" href="#myCarousel2" data-slide="prev">
 						      <span class="glyphicon glyphicon-chevron-left"></span>
 						      <span class="sr-only">Previous</span>
 						    </a>
-						    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+						    <a class="right carousel-control" href="#myCarousel2" data-slide="next">
 						      <span class="glyphicon glyphicon-chevron-right"></span>
 						      <span class="sr-only">Next</span>
 						    </a>
